Install usbgadget packages and autoload them

--- a/conf/machine/skycontroller3.conf
+++ b/conf/machine/skycontroller3.conf
@@ -4,6 +4,9 @@
 
 MACHINE_EXTRA_RRECOMMENDS = "kernel-modules kernel-devicetree"
 
+KERNEL_MODULE_AUTOLOAD += "g_ether usb_f_eem"
+MACHINE_ESSENTIAL_EXTRA_RRECOMMENDS += "kernel-module-g-ether kernel-module-usb-f-eem"
+
 DEFAULTTUNE ?= "cortexa7"
 include conf/machine/include/tune-cortexa7.inc
 
