Update ubifs parameters

--- a/conf/machine/skycontroller3.conf
+++ b/conf/machine/skycontroller3.conf
@@ -11,8 +11,9 @@ DEFAULTTUNE ?= "cortexa7"
 include conf/machine/include/tune-cortexa7.inc
 
 IMAGE_FSTYPES += "tar.bz2 ubi"
-MKUBIFS_ARGS = " -m 512 -e 15360 -c 3600 "
-UBINIZE_ARGS = " -p 16KiB -m 512 -s 512 "
+MKUBIFS_ARGS = " -m 2048 -e 126976 -c 468 "
+UBINIZE_ARGS = " -p 128KiB -m 2048 -s 2048 "
+UBI_VOLNAME = "rootfs"
 
 IMAGE_INSTALL_append = " kernel-devicetree kernel-image-zimage"
 
